--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products</title>
+    <title>Portfolio</title>
     <link href="css/stylesheet.css" rel="stylesheet" type="text/css">
     <link href="css/fontawesome/css/fontawesome.css" rel="stylesheet">
     <link href="css/fontawesome/css/brands.css" rel="stylesheet">
@@ -11,6 +11,14 @@
 </head>
 
 <body>
-    
+    <header>
+        <nav>
+            <a class="logobilde" href="index.html">Logobilde</a>
+            <a id="home-btn" href="index.html">Home</a>
+            <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
+            <a id="about-btn" href="about.html">About</a>
+            <a id="contact-btn" href="about.html">Contact</a>
+        </nav>
+    </header>
 </body>
 </html>
