--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <nav>
-            <a class="logobilde" href="index.html">Logobilde</a>
+            <img src="img/logo1.png" class="logobilde">
             <a id="home-btn" href="index.html">Home</a>
             <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
             <a id="about-btn" href="about.html">About</a>
@@ -31,7 +31,7 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
         </section>
         <article>
-            <img href="#" alt="placeholder-image">
+            <img src="https://placehold.co/400x400" alt="placeholder-image">
             <h3>About Our Company</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
             <a id="read-more-btn">Read more about us</a>
@@ -67,7 +67,7 @@
             </form>
         </section>
         <section id="bottom-banner">
-            <a class="logobilde">Logobilde</a>
+            <img src="img/logo1.png" class="logobilde" href="index.html">
             <h4>Company copyright 2023</h4>
             <ul>
                 <i class="fa-brands fa-facebook"></i>
