--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
             <h4>Company copyright 2023</h4>
             <ul>
                 <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-square-instagram"></i>
                 <i class="fa-brands fa-linkedin"></i>
             </ul>
         </section>
