--- a/about.html
+++ b/about.html
@@ -11,94 +11,94 @@
 </head>
 
 <body>
+    <div class="grid-container">
+        <header>
+            <nav>
+                <img src="img/logo1.png" class="logobilde">
+                <a id="home-btn" href="index.html">Home</a>
+                <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
+                <a id="about-btn" href="about.html">About</a>
+                <a id="contact-btn" href="about.html">Contact</a>
+            </nav>
+            <section id="about-company-header">
+                <article>
+                    <p>Company name</p>
+                    <h3>About our company</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada ut urna id aliquet. Mauris pulvinar nisi in porttitor facilisis. Proin fermentum turpis vitae velit interdum facilisis. Donec tincidunt metus est, eu ornare felis placerat vitae. Morbi ut arcu molestie lacus mollis cursus. Morbi odio magna, pharetra ut imperdiet at, auctor sed erat. Mauris lobortis in sem et convallis. Phasellus consequat nulla id justo tempor bibendum. Nulla pretium lectus at justo fringilla, nec sollicitudin purus varius.</p>
+                    <a id="get-in-touch-btn" href="#contact-us-section">Get in touch with us</a>
+                </article>
+            </section>
+        </header>
 
-    <header>
-        <nav>
-            <img src="img/logo1.png" class="logobilde">
-            <a id="home-btn" href="index.html">Home</a>
-            <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
-            <a id="about-btn" href="about.html">About</a>
-            <a id="contact-btn" href="about.html">Contact</a>
-        </nav>
-        <section id="about-company-header">
-            <article>
-                <p>Company name</p>
-                <h3>About our company</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada ut urna id aliquet. Mauris pulvinar nisi in porttitor facilisis. Proin fermentum turpis vitae velit interdum facilisis. Donec tincidunt metus est, eu ornare felis placerat vitae. Morbi ut arcu molestie lacus mollis cursus. Morbi odio magna, pharetra ut imperdiet at, auctor sed erat. Mauris lobortis in sem et convallis. Phasellus consequat nulla id justo tempor bibendum. Nulla pretium lectus at justo fringilla, nec sollicitudin purus varius.</p>
-                <a id="get-in-touch-btn" href="#">Get in touch with us</a>
-            </article>
-        </section>
-    </header>
+        <main>
+            <section id="our-services-section">
+                <h2>Our services</h1>
+                <article class="branding-article">
+                    <i class="fa-sharp fa-solid fa-users"></i>
+                    <p>Branding</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article class="branding-article">
+                    <i class="fa-solid fa-cloud-arrow-up"></i>
+                    <p>Branding</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article class="branding-article">
+                    <i class="fa-solid fa-code"></i>
+                    <p>Branding</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article class="branding-article">
+                    <i class="fa-solid fa-wifi"></i>
+                    <p>Branding</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+            </section>
+            <section id="client-logos">
+                <h2>Some of our clients</h2>
+                <img src="img/logo1.png" alt="client logo">
+                <img src="img/logo2.png" alt="client logo">
+                <img src="img/logo3.png" alt="client logo">
+            </section>
+            <section id="contact-us-section">
+                <article>
+                    <h4>Send us a message</h4>
+                    <form>
+                        <p>Name</p>
+                        <label for="name-input" class="hidden">Name</label>
+                        <input type="text" id="name-input">
+                        <p>Subject</p>
+                        <label for="subject-input" class="hidden">Subject</label>
+                        <input type="text" id="subject-input">
+                        <p>Message</p>
+                        <label for="message-input" class="hidden">Message</label>
+                        <input type="text" id="message-input">
+                        <input type="submit" id="send-message-btn" value="Send message">
+                    </form>
+                </article>
+                <article>
+                    <h4>Contact information</h4>
+                    <p>Donec orci lorem, aliquam sed justo id, ultrices dapibus sapien. In et porttitor erat. Suspendisse mattis fringilla nibh eget egestas. Donec pulvinar lorem lacus, ut fringilla sem pretium at. Proin tincidunt risus at fermentum scelerisque. Donec bibendum metus eget finibus tristique. Proin lacinia ligula cursus nunc tincidunt laoreet. </p>
+                    <i class="fa-solid fa-location-pin"></i> <p>B R A Veien 4, 1757 Halden</p>
+                    <i class="fa-solid fa-phone"></i> <p>69 60 80 00</p>
+                    <i class="fa-solid fa-envelope"></i> <p>postmottak@hiof.no</p>
+                </article>
+            </section>
+        </main>
 
-    <main>
-        <section id="our-services-section">
-            <h2>Our services</h1>
-            <article class="branding-article">
-                <i class="fa-sharp fa-solid fa-users"></i>
-                <p>Branding</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-            <article class="branding-article">
-                <i class="fa-solid fa-cloud-arrow-up"></i>
-                <p>Branding</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-            <article class="branding-article">
-                <i class="fa-solid fa-code"></i>
-                <p>Branding</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-            <article class="branding-article">
-                <i class="fa-solid fa-wifi"></i>
-                <p>Branding</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-        </section>
-        <section id="client-logos">
-            <h2>Some of our clients</h2>
-            <img src="img/logo1.png" alt="client logo">
-            <img src="img/logo2.png" alt="client logo">
-            <img src="img/logo3.png" alt="client logo">
-        </section>
-        <section id="contact-us-section">
-            <article>
-                <h4>Send us a message</h4>
-                <form>
-                    <p>Name</p>
-                    <label for="name-input" class="hidden">Name</label>
-                    <input type="text" id="name-input">
-                    <p>Subject</p>
-                    <label for="subject-input" class="hidden">Subject</label>
-                    <input type="text" id="subject-input">
-                    <p>Message</p>
-                    <label for="message-input" class="hidden">Message</label>
-                    <input type="text" id="message-input">
-                    <input type="submit" id="send-message-btn" value="Send message">
-                </form>
-            </article>
-            <article>
-                <h4>Contact information</h4>
-                <p>Donec orci lorem, aliquam sed justo id, ultrices dapibus sapien. In et porttitor erat. Suspendisse mattis fringilla nibh eget egestas. Donec pulvinar lorem lacus, ut fringilla sem pretium at. Proin tincidunt risus at fermentum scelerisque. Donec bibendum metus eget finibus tristique. Proin lacinia ligula cursus nunc tincidunt laoreet. </p>
-                <i class="fa-solid fa-location-pin"></i> <p>B R A Veien 4, 1757 Halden</p>
-                <i class="fa-solid fa-phone"></i> <p>69 60 80 00</p>
-                <i class="fa-solid fa-envelope"></i> <p>postmottak@hiof.no</p>
-            </article>
-        </section>
-    </main>
-
-    <footer>
-        <section id="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28345.84675922888!2d11.335104025444062!3d59.13506861222268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464412f0d344246f%3A0x4e47f19c99b253b1!2zSMO4Z3Nrb2xlbiBpIMOYc3Rmb2xk!5e0!3m2!1sno!2sno!4v1700995601832!5m2!1sno!2sno" width="1600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </section>
-        <section id="bottom-banner">
-            <img src="img/logo1.png" class="logobilde" href="index.html">
-            <h4>Company copyright 2023</h4>
-            <ul>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-linkedin"></i>
-            </ul>
-        </section>
-    </footer>
-
+        <footer>
+            <section id="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28345.84675922888!2d11.335104025444062!3d59.13506861222268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464412f0d344246f%3A0x4e47f19c99b253b1!2zSMO4Z3Nrb2xlbiBpIMOYc3Rmb2xk!5e0!3m2!1sno!2sno!4v1700995601832!5m2!1sno!2sno" width="1600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </section>
+            <section id="bottom-banner">
+                <img src="img/logo1.png" class="logobilde" href="index.html">
+                <h4>Company copyright 2023</h4>
+                <ul class="social-media-icons">
+                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                </ul>
+            </section>
+        </footer>
+    </div>
 </body>
 </html>
