--- a/portfolio.html
+++ b/portfolio.html
@@ -11,67 +11,87 @@
 </head>
 
 <body>
+    <div class="grid-container">
+        <header>
+            <nav>
+                <img src="img/logo1.png" class="logobilde" href="index.html">
+                <a id="home-btn" href="index.html">Home</a>
+                <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
+                <a id="about-btn" href="about.html">About</a>
+                <a id="contact-btn" href="about.html">Contact</a>
+            </nav>
+            <section>
+                <h1>Portfolio</h1>
+            </section>
+        </header>
 
-    <header>
-        <nav>
-            <img src="img/logo1.png" class="logobilde" href="index.html">
-            <a id="home-btn" href="index.html">Home</a>
-            <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
-            <a id="about-btn" href="about.html">About</a>
-            <a id="contact-btn" href="about.html">Contact</a>
-        </nav>
-        <section>
-            <h1>Portfolio</h1>
-        </section>
-    </header>
+        <main>
+            <section id="explore-previous-jobs-section">
+                <h2>Explore previous jobs</h2>
+                <ul>
+                    <li><a>Branding</a></li>
+                    <li><a>Design</a></li>
+                    <li><a>Development</a></li>
+                </ul>
+            </section>
+            <section id="branding-section">
+                <h2>Branding</h2>
+                <article>
+                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+                <article>
+                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+                <article>
+                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+                <article>
+                    <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+            </section>
+            <section id="design-section">
+                <h2>Design</h2>
+                <article>
+                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+                <article>
+                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+                <article>
+                    <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+            </section>
+            <section id="development-section">
+                <h2>Development</h2>
+                <article>
+                    <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+                <article>
+                    <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
+                    <p>Et harum quidem</p>
+                </article>
+            </section>
+        </main>
 
-    <main>
-        <section id="explore-previous-jobs-section">
-            <h2>Explore previous jobs</h2>
-            <ul>
-                <li><a>Branding</a></li>
-                <li><a>Design</a></li>
-                <li><a>Development</a></li>
-            </ul>
-        </section>
-        <section id="branding-section">
-            <h2>Branding</h2>
-            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-            <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-        </section>
-        <section id="design-section">
-            <h2>Design</h2>
-            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-            <img class="small-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-        </section>
-        <section id="development-section">
-            <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-            <img class="large-img" src="https://placehold.co/400x400" alt="placeholder-image">
-            <p>Et harum quidem</p>
-        </section>
-    </main>
-
-    <footer>
-        <section id="bottom-banner">
-            <img src="img/logo1.png" class="logobilde" href="index.html">
-            <h4>Company copyright 2023</h4>
-            <ul>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-linkedin"></i>
-            </ul>
-        </section>
-    </footer>
+        <footer>
+            <section id="bottom-banner">
+                <img src="img/logo1.png" class="logobilde" href="index.html">
+                <h4>Company copyright 2023</h4>
+                <ul class="social-media-icons">
+                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                </ul>
+            </section>
+        </footer>
+    </div>
 </body>
 </html>
