--- a/index.html
+++ b/index.html
@@ -11,72 +11,73 @@
 </head>
 
 <body>
-    <header>
-        <nav>
-            <img src="img/logo1.png" class="logobilde">
-            <a id="home-btn" href="index.html">Home</a>
-            <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
-            <a id="about-btn" href="about.html">About</a>
-            <a id="contact-btn" href="about.html">Contact</a>
-        </nav>
-        <section>
-            <h1>Compelling headline</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
-        </section>
-    </header>
+    <div class="grid-container">
+        <header>
+            <nav>
+                <img src="img/logo1.png" class="logobilde">
+                <a id="home-btn" href="index.html">Home</a>
+                <a id="portfolio-btn" href="portfolio.html">Portfolio</a>
+                <a id="about-btn" href="about.html">About</a>
+                <a id="contact-btn" href="about.html">Contact</a>
+            </nav>
+            <section>
+                <h1>Compelling headline</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
+            </section>
+        </header>
 
-    <main>
-        <section>
-            <h3>Engaging subheading. What can you help your visitors with</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
-        </section>
-        <article>
-            <img src="https://placehold.co/400x400" alt="placeholder-image">
-            <h3>About Our Company</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
-            <a id="read-more-btn">Read more about us</a>
-        </article>
-        <section>
-            <h3>Our services</h3>
-            <article id="branding">
-                <h4>Branding</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <main>
+            <section>
+                <h3>Engaging subheading. What can you help your visitors with</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
+            </section>
+            <article>
+                <img src="https://placehold.co/400x400" alt="placeholder-image">
+                <h3>About Our Company</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
+                <a id="read-more-btn">Read more about us</a>
             </article>
-            <article id="design">
-                <h4>Design</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-            <article id="development">
-                <h4>Development</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-            <article id="support">
-                <h4>Support</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            </article>
-        </section>
-    </main>
+            <section>
+                <h3>Our services</h3>
+                <article id="branding">
+                    <h4>Branding</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article id="design">
+                    <h4>Design</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article id="development">
+                    <h4>Development</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+                <article id="support">
+                    <h4>Support</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                </article>
+            </section>
+        </main>
 
-    <footer>
-        <section id="newsletter">
-            <h3>Sign up for our newsletter</h3>
-            <form>
-                <label for="newsletter-signup" class="hidden">Sign-up for email newsletter</label>
-                <input type="text" id="newsletter-signup">
-                <input type="submit" value="Sign me up">
-            </form>
-        </section>
-        <section id="bottom-banner">
-            <img src="img/logo1.png" class="logobilde" href="index.html">
-            <h4>Company copyright 2023</h4>
-            <ul>
-                <i class="fa-brands fa-facebook"></i>
-                <i class="fa-brands fa-square-instagram"></i>
-                <i class="fa-brands fa-linkedin"></i>
-            </ul>
-        </section>
-    </footer>
-    
+        <footer>
+            <section id="newsletter">
+                <h3>Sign up for our newsletter</h3>
+                <form>
+                    <label for="newsletter-signup" class="hidden">Sign-up for email newsletter</label>
+                    <input type="text" id="newsletter-signup">
+                    <input type="submit" value="Sign me up">
+                </form>
+            </section>
+            <section id="bottom-banner">
+                <img src="img/logo1.png" class="logobilde" href="index.html">
+                <h4>Company copyright 2023</h4>
+                <ul class="social-media-icons">
+                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                </ul>
+            </section>
+        </footer>
+    </div>
 </body>
 
 </html>
