--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,9 @@
             <section id="explore-previous-jobs-section">
                 <h2>Explore previous jobs</h2>
                 <ul>
-                    <li><a>Branding</a></li>
-                    <li><a>Design</a></li>
-                    <li><a>Development</a></li>
+                    <li><a href="#branding-section">Branding</a></li>
+                    <li><a href="#design-section">Design</a></li>
+                    <li><a href="#development-section">Development</a></li>
                 </ul>
             </section>
             <section id="branding-section">
@@ -85,10 +85,10 @@
             <section id="bottom-banner">
                 <img src="img/logo1.png" class="logobilde" href="index.html">
                 <h4>Company copyright 2023</h4>
-                <ul class="social-media-icons">
-                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                <ul>
+                    <a class="social-media-icons" href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a class="social-media-icons" href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a class="social-media-icons" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                 </ul>
             </section>
         </footer>
