--- a/about.html
+++ b/about.html
@@ -87,15 +87,15 @@
         </main>
 
         <footer>
-            <section id="map">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28345.84675922888!2d11.335104025444062!3d59.13506861222268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464412f0d344246f%3A0x4e47f19c99b253b1!2zSMO4Z3Nrb2xlbiBpIMOYc3Rmb2xk!5e0!3m2!1sno!2sno!4v1700995601832!5m2!1sno!2sno" width="1600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </section>
+            <section>
+                <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28345.84675922888!2d11.335104025444062!3d59.13506861222268!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x464412f0d344246f%3A0x4e47f19c99b253b1!2zSMO4Z3Nrb2xlbiBpIMOYc3Rmb2xk!5e0!3m2!1sno!2sno!4v1700995601832!5m2!1sno!2sno" width="1600" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </section>
             <section id="bottom-banner">
                 <img src="img/logo1.png" class="logobilde" href="index.html">
                 <h4>Company copyright 2023</h4>
-                <ul class="social-media-icons">
-                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                <ul>
+                    <a class="social-media-icons" href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a class="social-media-icons" href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a class="social-media-icons" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                 </ul>
             </section>
         </footer>
