--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
                 <a id="about-btn" href="about.html">About</a>
                 <a id="contact-btn" href="about.html">Contact</a>
             </nav>
-            <section>
+            <section id="headline">
                 <h1>Compelling headline</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
+                <a href="#our-services" id="read-more-about-our-services-btn">Read more about our services</a>
             </section>
         </header>
 
@@ -35,9 +36,9 @@
                 <img src="https://placehold.co/400x400" alt="placeholder-image">
                 <h3>About Our Company</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut fermentum luctus sapien in convallis. Quisque a imperdiet felis. Curabitur id euismod neque.</p>
-                <a id="read-more-btn">Read more about us</a>
+                <a id="read-more-about-us-btn" href="about.html">Read more about us</a>
             </article>
-            <section>
+            <section id="our-services">
                 <h3>Our services</h3>
                 <article id="branding">
                     <h4>Branding</h4>
@@ -70,10 +71,10 @@
             <section id="bottom-banner">
                 <img src="img/logo1.png" class="logobilde" href="index.html">
                 <h4>Company copyright 2023</h4>
-                <ul class="social-media-icons">
-                    <a href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
-                    <a href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                <ul>
+                    <a class="social-media-icons" href="http://facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a class="social-media-icons" href="http://instagram.com"><i class="fa-brands fa-square-instagram"></i></a>
+                    <a class="social-media-icons" href="http://linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                 </ul>
             </section>
         </footer>
