--- a/portfolio.html
+++ b/portfolio.html
@@ -20,14 +20,16 @@
                 <a id="about-btn" href="about.html">About</a>
                 <a id="contact-btn" href="about.html">Contact</a>
             </nav>
-            <section>
+            <section id="portfolio-heading">
                 <h1>Portfolio</h1>
             </section>
         </header>
 
         <main>
             <section id="explore-previous-jobs-section">
-                <h2>Explore previous jobs</h2>
+                <section id="explore-previous-jobs-h2">
+                    <h2>Explore previous jobs</h2>
+                </section>
                 <ul>
                     <li><a href="#branding-section">Branding</a></li>
                     <li><a href="#design-section">Design</a></li>
